# RetroDash

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.n64  Makefile.xbox  README.md  conanfile.txt  package-lock.json  package.json
assets/: 80s_reminder.xm  Basic_LAZER.font.json  credits.md  dialog_info_font.font.json  dialog_title_font.font.json  dialog_title_font.sprite.json  geom_dash.sprite.json  geom_dash.tileset.json  level01.level.json  level01.level.tiles  level01.tiles.1  level01.tiles.2  level_select_font.font.json  player.animation.json  player.sprite.json  synth_attack_4.mod  title.sprite.json  title_idle.animation.json  tutorial.level.json  tutorial.level.tiles
assets/common/: nav_font.font.json
assets/dialog/: dialog_info_font.font.json
assets/level_select/: level_select_info_font.font.json  select_level.sprite.json  selector_arrows.sprite.json
assets/settings/: settings.sprite.json
assets/the_factory/: the_factory.level.json  the_factory.sprite.json  the_factory.tiles.1  the_factory.tiles.2  the_factory.tileset.json
assets/the_heights/: bd_80s.mod  the_heights.level.json  the_heights.sprite.json  the_heights.tiles.1  the_heights.tiles.2  the_heights.tiles.3  the_heights.tileset.json
assets/the_streets/: the_streets.level.json  the_streets.tiles.1  the_streets.tiles.2  the_streets.tiles.3  the_streets.tiles.4  the_streets.tileset.json
assets/title/: title_idle_bottom.sprite.json  title_menu.font.json  title_menu.sprite.json  title_menu_font.font.json  title_music.mod  title_platform.sprite.json
assets/tutorial/: tutorial.level.json  tutorial.tiles.guided  tutorial.tiles.practice  tutorial.tileset.json  tutorial_info_font.font.json
src/: animation_player.c  animation_player.h  audio.h  background.c  background.h  batch.h  camera.c  camera.h  entity.c  entity.h  filesystem.h  font.c  font_private.h  game.c  game.h  game_settings.c  game_settings.h  input.h  intersection.c  intersection.h  level.c  level.h  n64_filesystem.c  n64_input.c  n64_input.h  n64_main.c  n64_renderer.c  n64_renderer.h  particles.c  particles.h  player.c  player.h  rect.c  rect.h  renderer.c  renderer.h  teleport.c  teleport.h  tile_collision.c  tile_collision.h  (+6 more)
src/n64/: batch.c  batch.h  n64_audio.c  n64_audio.h  n64_filesystem.c  n64_font.c  n64_input.c  n64_input.h  n64_main.c  n64_renderer.c  n64_renderer.h
src/screens/: attempt_dialog.c  attempt_dialog.h  dialog.c  level_select.c  level_select.h  pause_dialog.c  pause_dialog.h  playing.c  playing.h  playing_base.c  playing_base.h  screen_util.c  settings.c  settings.h  states.h  title.c  title.h  tutorial.c  tutorial.h
src/sdl/: sdl_audio.c  sdl_audio.h  sdl_desktop_main.c  sdl_emscripten_main.c  sdl_filesystem.c  sdl_font.c  sdl_input.c  sdl_input.h  sdl_main.c  sdl_renderer.c  sdl_renderer.h
src/state/: attempt_dialog.c  attempt_dialog.h  dialog.c  dialog.h  level_select.c  level_select.h  pause_dialog.c  pause_dialog.h  playing.c  playing.h  playing_base.c  playing_base.h  screen_util.h  settings.c  settings.h  states.h  title.c  title.h  tutorial.c  tutorial.h
src/xbox/: xbox_audio.c  xbox_audio.h  xbox_main.c
tools/: build_n64.js  emscripten_shell.html  prepare_assets.js  prepare_emscripten_assets.js  prepare_n64_assets.js  prepare_sdl_assets.js  spritefont.html  update_sdl_level.js
tools/devcontainer/: .devcontainer.xbox.json
